A module with a module-info.java compiles on the module path, its dependencies riding --module-path as explicit or automatic modules, and its test compile patches the module and reads the test classpath as the unnamed module